--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="https://t4.ftcdn.net/jpg/14/00/54/75/240_F_1400547593_4t9ElpRXooRXtVQHRz17WKMN5fhwKY97.jpg" />
+  <link rel="icon" type="image/svg+xml" href="https://static.vecteezy.com/system/resources/previews/030/659/186/large_2x/minimalistic-desktop-background-high-quality-free-photo.jpg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My To-Do List</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
