--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Gluten:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poiret+One&family=Quicksand:wght@300..700&display=swap"
     rel="stylesheet">
+
+  <meta property="og:title" content="My To-Do List" />
+  <meta property="og:description" content="A simple and clean to-do list app to organize your daily tasks." />
+  <meta property="og:image" content="https://static.vecteezy.com/system/resources/previews/030/659/186/large_2x/minimalistic-desktop-background-high-quality-free-photo.jpg" />
+  <meta property="og:url" content="https://to-do-frontend-rose.vercel.app/" />
+  <meta property="og:type" content="website" />
+  
 </head>
 
 <body>
